--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Cornwall (England : County) -- Fiction'
 - !lcsh 'Historical fiction'
+- GITenberg
 title: 'A Prince of Cornwall
 
   A Story of Glastonbury and the West in the Days of Ina of Wessex'
